# jcal

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh
.claude/skills/check/: SKILL.md
.claude/skills/doc-check/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
demo/: README.md  demo.tape
src/: app.rs  main.rs  ui.rs  update.rs
