[package]
name = "jcal"
version = "0.3.3"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
chrono = "0.4.44"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
self_update = { version = "0.43.1", features = ["compression-flate2"] }
